--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/netlify": "^3.1.1",
     "@notionhq/client": "^2.2.14",
     "astro": "^4.0.3",
+    "cheerio": "1.0.0-rc.12",
     "dotenv": "^16.3.1"
   }
 }
